<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_register_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="eu.rasus.fer.rasus.RegisterView"
  android:fillViewport="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily=""
        android:text="@string/welcome_to"
        android:textSize="30sp"/>

      <TextView
        android:id="@+id/chitChatReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="20dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_text"/>

      <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_text"/>

      <EditText
        android:id="@+id/register_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password_text"/>

      <Button
        android:id="@+id/register_button"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:background="@drawable/login_btn"
        android:text="@string/register_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    </LinearLayout>
  </LinearLayout>
</ScrollView>
