<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_login_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="eu.rasus.fer.rasus.login.LoginView"
  android:fillViewport="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/welcome_to"
          android:textSize="30sp"
          android:fontFamily=""
          android:id="@+id/textView"/>

        <TextView
          android:id="@+id/chitChatLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_name"
          android:textSize="30sp"
          android:paddingStart="10dp"
          android:paddingLeft="10dp"
          android:textColor="@color/colorPrimary"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <EditText
          android:id="@+id/login_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/username_text"/>

        <EditText
          android:id="@+id/login_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/password_text"/>

        <Button
          android:layout_width="80dp"
          android:layout_height="25dp"
          android:text="@string/login_text"
          android:layout_gravity="end"
          android:id="@+id/login_button"
          android:background="@drawable/login_btn"
          android:textColor="@color/white"
          android:textAllCaps="false"/>

      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@color/whitesmoke"
      android:gravity="center"
      android:layout_marginTop="15dp"
      android:paddingTop="15dp"
      android:paddingBottom="20dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with_text"/>

      <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"/>

      <TextView
        android:id="@+id/here_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_text"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/link"/>
    </LinearLayout>

  </LinearLayout>
</ScrollView>
